[gd_scene load_steps=9 format=2]

[ext_resource path="res://fps_demo/tools/Console/Console.gd" type="Script" id=1]
[ext_resource path="res://fps_demo/assets/fonts/arial_32_dynamicfont.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )

[sub_resource type="Animation" id=2]
length = 0.2
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath("Container/LineEdit")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "clear"
}, {
"args": [  ],
"method": "clear"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 2.37841 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -300 ) ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0705882, 0.0823529, 0.105882, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0705882, 0.0823529, 0.105882, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0705882, 0.0823529, 0.105882, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.105882, 0.105882, 0.105882, 1 )
border_width_left = 8
border_width_top = 5
border_width_bottom = 5
border_color = Color( 0.105882, 0.105882, 0.105882, 1 )

[node name="Console" type="CanvasLayer"]
layer = 128
script = ExtResource( 1 )

[node name="ConsoleBox" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.845294 )
anchor_right = 1.0
anchor_bottom = 0.5
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ConsoleBox"]
anims/fade = SubResource( 2 )

[node name="Container" type="VBoxContainer" parent="ConsoleBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConsoleControl" type="Control" parent="ConsoleBox/Container"]
margin_right = 1024.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConsoleText" type="RichTextLabel" parent="ConsoleBox/Container/ConsoleControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 3.0
focus_neighbour_left = NodePath("../../LineEdit")
focus_neighbour_top = NodePath("../../LineEdit")
focus_neighbour_right = NodePath("../../LineEdit")
focus_neighbour_bottom = NodePath("../../LineEdit")
focus_next = NodePath("../../LineEdit")
focus_previous = NodePath("../../LineEdit")
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/bold_italics_font = ExtResource( 2 )
custom_fonts/italics_font = ExtResource( 2 )
custom_fonts/bold_font = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.811765, 0.835294, 0.870588, 1 )
custom_colors/selection_color = Color( 0.215686, 0.235294, 0.266667, 1 )
custom_constants/line_separation = 4
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="ConsoleBox/Container"]
margin_top = 252.0
margin_right = 1024.0
margin_bottom = 298.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
size_flags_horizontal = 3
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 2 )
caret_blink = true
